# LEGOAniView

./: CMakeLists.txt
src/: Color.h  LEGOAniView.cpp  LEGOAniView.h  main.cpp
src/ani/: Actor.h  Ani.h  Component.h  Keyframe.h  component.h  keyframe.h
src/file/: file.cpp  file.h  types.h
src/misc/: Color.h
